# VOLEitH-bench

./: .gitignore  Cargo.toml  GEMINI.md  README.md  improve.md  notebooklm.md  reff.md  related_work.md  report.md  simple_vole.md  vole.md
.serena/: project.yml
benches/: README.md  common.rs  e2e.rs  keccak_f.rs  keccak_f_benches.rs  poseidon.rs  sha256.rs  voleith.rs
benches/utils/: common.rs  e2e.rs  major.rs  mod.rs  voleith.rs
circuits/: README.md
circuits/keccak_f/f2/: private.txt
circuits/poseidon/f64/hash_chain_10/: circuit.txt
circuits/sha256/f2/hashchain/: private.txt
foundry/: README.md
foundry/script/: verify.s.sol  vole_verifier.s.sol
foundry/test/: VerifyProof.t.sol
paper/: .latexmkrc  abstract.tex  analysis.tex  background.tex  benchmark_design.tex  conclusion.tex  intro.tex  intro_background.tex  main.tex  our_approach.tex  preliminaries.tex  preliminaries.tex.bak  preliminaries.tex.bak2  references.tex  related_work.tex  results.tex  results_analysis.tex  snark_insights.tex
src/: e2e.rs  main.rs  prove.rs  serialize.rs  snark.rs  voleith.rs
