[package]
name = "voleitH-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true

[dependencies]
schmivitz = { git = "https://github.com/adust09/swanky", rev="fa3dce758681239dc9dba00492b3b4f288794228"}
schmivitz-snark = { git = "https://github.com/adust09/swanky", rev="fa3dce758681239dc9dba00492b3b4f288794228"}

eyre = "0.6.12"
rand = "0.8.5"
merlin = "3.0.0"
openssl = "0.10.55"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29.10"
once_cell = "1.18.0"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "keccak_f"
harness = false

[[bench]]
name = "sha256"
harness = false
